[package]
name = "secel"
version = "0.0.2"
authors = ["seenees <code@seenees.de>"]
description = "Simply Enough Conditional Expression Language parser"
documentation = "https://docs.rs/secel"
repository = "https://github.com/seenees/secel.git"
license = "MIT"
edition = "2021"

[dependencies]
ascii_tree = "0.1.1"
difference = "2.0.0"
rust_decimal = "1.26.1"