[package]
name = "secel"
version = "0.0.5"
authors = ["senees <code@senees.de>"]
description = "SECEL parser"
documentation = "https://docs.rs/secel"
repository = "https://github.com/senees/secel.git"
license = "MIT"
edition = "2021"

[dependencies]
ascii_tree = "0.1.1"
difference = "2.0.0"
rust_decimal = "1.26.1"
